misurata inerzia disco

--- a/PENDOLO DI TORSIONE/PYTHON/inerzia_disco.ipynb
+++ b/PENDOLO DI TORSIONE/PYTHON/inerzia_disco.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,10 @@
     "raggio = 0.01 # m\n",
     "alfa = (alfa/180) * np.pi # rad/s^2\n",
     "sigma_alfa = np.array([sigma_alfa1,sigma_alfa2,sigma_alfa3])\n",
-    "sigma_alfa = (sigma_alfa/180)*np.pi #rad/s^2"
+    "sigma_alfa = (sigma_alfa/180)*np.pi #rad/s^2\n",
+    "\n",
+    "r_disco = 0.05 #m\n",
+    "m_disco = 0.12 #Kg"
    ]
   },
   {
@@ -53,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -97,6 +100,68 @@
     "plt.show()\n",
     "\n",
     "print(r)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### inerzia attesa\n",
+    "\n",
+    "$I = \\frac{1}{2} m r^2$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inerzia disco attesa:  0.00015\n"
+     ]
+    }
+   ],
+   "source": [
+    "I_disco_attesa = 0.5 * (r_disco ** 2) * m_disco\n",
+    "print('Inerzia disco attesa: ',np.round(I_disco_attesa,6))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### inerzia misurata\n",
+    "\n",
+    "$I\\alpha = mgr \\Rightarrow I = \\frac{mgr}{\\alpha}$\n",
+    "\n",
+    "$\\alpha \\propto m \\Rightarrow \\alpha = \\frac{gr}{I} m$\n",
+    "\n",
+    "$B = \\frac{gr}{I} \\Rightarrow I =  \\frac{gr}{B}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inerzia misurata disco:  0.000122 5e-06\n"
+     ]
+    }
+   ],
+   "source": [
+    "I = 9.8 * raggio / r.B\n",
+    "sigmaI = I * (np.mean(r.sigmaB)/r.B) # i sigmaB sono 3\n",
+    "\n",
+    "print('Inerzia misurata disco: ',np.round(I,6),np.round(sigmaI,6))"
    ]
   }
  ],
