--- a/PENDOLO DI TORSIONE/PYTHON/inerzia_elicottero.Ipynb
+++ b/PENDOLO DI TORSIONE/PYTHON/inerzia_elicottero.Ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# INERZIA ELICOTTERO\n",
+    "\n",
+    "## RACCOLTA DATI"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +41,12 @@
     "raggio = 0.01 # m\n",
     "alfa = (alfa/180) * np.pi # rad/s^2\n",
     "sigma_alfa = np.array([sigma_alfa1,sigma_alfa2,sigma_alfa3])\n",
-    "sigma_alfa = (sigma_alfa/180)*np.pi #rad/s^2"
+    "sigma_alfa = (sigma_alfa/180)*np.pi #rad/s^2\n",
+    "\n",
+    "m_asta = 0.026 #Kg massa asta\n",
+    "m_pesi = 0.08 #Kg massa singolo peso\n",
+    "l = 0.38 # m lunghezza asta\n",
+    "D = (l-0.02)/2 # m distanza del centro di massa dei pesi dall'asse di rotazione"
    ]
   },
   {
@@ -44,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -88,6 +103,70 @@
     "plt.show()\n",
     "\n",
     "print(r)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### inerzia attesa\n",
+    "\n",
+    "$I = I_{asta} + 2I_{pesi} = \\frac{1}{12}m_{asta}l^2_{asta} + 2m_{pesi}D^2$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inerzia attesa elicottero:  0.005497\n"
+     ]
+    }
+   ],
+   "source": [
+    "I_asta = (1/12)*m_asta * (l**2)\n",
+    "I_pesi = 2 * m_pesi * (D**2)\n",
+    "I = I_asta + I_pesi\n",
+    "print(\"Inerzia attesa elicottero: \",np.round(I,6))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### inerzia misurata:\n",
+    "\n",
+    "$I\\alpha = mgr \\Rightarrow I = \\frac{mgr}{\\alpha}$\n",
+    "\n",
+    "$\\alpha \\propto m \\Rightarrow \\alpha = \\frac{gr}{I} m$\n",
+    "\n",
+    "$B = \\frac{gr}{I} \\Rightarrow I =  \\frac{gr}{B}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inerzia misurata elicottero:  0.003857 0.000184\n"
+     ]
+    }
+   ],
+   "source": [
+    "I = 9.8 * raggio / r.B\n",
+    "sigmaI = I * (np.mean(r.sigmaB)/r.B) # i sigmaB sono 3\n",
+    "\n",
+    "print('Inerzia misurata elicottero: ',np.round(I,6),np.round(sigmaI,6))"
    ]
   }
  ],
