--- a/CALORIMETRO/PYTHON/c_h2o_PARTE_C.ipynb
+++ b/CALORIMETRO/PYTHON/c_h2o_PARTE_C.ipynb
@@ -40,6 +40,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## misura della costante di joule (J) $T \\propto t$\n",
+    "\n",
+    "$ T = \\frac{I V}{c_{h_2O} J (m + m_e)} t  \n",
+    "\\Rightarrow B = \\frac{I V}{c_{h_2O} J (m + m_e)}  \\Rightarrow J = \\frac{I V}{c_{h_2O} B (m + m_e)} $\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### misura ideale"
    ]
   },
@@ -80,7 +92,7 @@
     }
    ],
    "source": [
-    "misure_buone = 15\n",
+    "misure_buone = 15 # prendendo solo 10 misurazioni si ottiene 4.16\n",
     "r = RettaInterpolata(t[:misure_buone],T[:misure_buone],0.5)\n",
     "plt.errorbar(r.X,r.Y,fmt='o',yerr=r.sigmaY,ecolor='black',capsize=5,color='red')\n",
     "plt.plot(r.best_x,r.best_y)\n",
