renamed costante di joule

--- a/CALORIMETRO/PYTHON/costante_di_joule_PARTE_C.ipynb
+++ b/CALORIMETRO/PYTHON/costante_di_joule_PARTE_C.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# calore specifico dell'acqua parte C"
+    "# COSTANTE DI JOULE parte C"
    ]
   },
   {
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
       "gradi di libertà: 13\n",
       "vincoli: 2\n",
       "        \n",
-      "Calore specifico:  2.86 ± 0.21\n"
+      "Costante di joule:  2.86 ± 0.21\n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
     "\n",
     "J = (I*V)/(c_h20 * r.B * (m_h20 + me))\n",
     "sigmaJ = J * r.sigmaB / r.B\n",
-    "print('Calore specifico: ',np.round(J,2),'±',np.round(sigmaJ,2))"
+    "print('Costante di joule: ',np.round(J,2),'±',np.round(sigmaJ,2))"
    ]
   },
   {
@@ -118,15 +118,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "calori specifici:  [4.79 4.79 4.79 4.79 4.79 4.79 4.49 4.16 3.88 3.54 3.32 3.1  2.86]\n",
-      "sigma calori specifici:  [3.39 2.14 1.52 1.15 0.91 0.74 0.56 0.44 0.36 0.3  0.26 0.22 0.21]\n"
+      "costante di joule:  [4.79 4.79 4.79 4.79 4.79 4.79 4.49 4.16 3.88 3.54 3.32 3.1  2.86]\n",
+      "sigma costante di joule:  [3.39 2.14 1.52 1.15 0.91 0.74 0.56 0.44 0.36 0.3  0.26 0.22 0.21]\n"
      ]
     },
     {
@@ -146,8 +146,8 @@
     "\n",
     "for i in range(3,len(T)):\n",
     "    r = RettaInterpolata(t[:i], T[:i],0.5) # calcola retta considerando solo i primi punti\n",
-    "    J = (I*V)/(c_h20 * r.B * (m_h20 + me)) # calcola il valore del calore specifico \n",
-    "    sigmaJ = J * r.sigmaB / r.B # calcola l'errore del calore specifico\n",
+    "    J = (I*V)/(c_h20 * r.B * (m_h20 + me)) # calcola il valore del costante di joule \n",
+    "    sigmaJ = J * r.sigmaB / r.B # calcola l'errore del costante di joule\n",
     "\n",
     "    calori_specifici.append(J)\n",
     "    sigma_calori_specifici.append(sigmaJ)\n",
@@ -160,11 +160,11 @@
     "    plt.xticks(t)\n",
     "# plt.show()\n",
     "\n",
-    "cs = np.array(calori_specifici)\n",
-    "scs = np.array(sigma_calori_specifici)\n",
+    "cj = np.array(calori_specifici)\n",
+    "scj = np.array(sigma_calori_specifici)\n",
     "\n",
-    "print(\"calori specifici: \", np.round(cs,2))\n",
-    "print(\"sigma calori specifici: \", np.round(scs,2)) # ho meno errori quando ho più punti"
+    "print(\"costante di joule: \", np.round(cj,2))\n",
+    "print(\"sigma costante di joule: \", np.round(scj,2)) # ho meno errori quando ho più punti"
    ]
   },
   {
@@ -176,29 +176,29 @@
     "\n",
     "- $\\sigma_y$ aumenta con l'aumentare dei punti che vengono presi in considerazione\n",
     "- $\\sigma_B$ invece diminuisce perchè prendendo in considerazione più punti aumenta la precisione\n",
-    "- L'incertezza dei calori specifici diminuisce al crescere delle misure"
+    "- L'incertezza dei costante di joule diminuisce al crescere delle misure"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "calore_specifico:  3.39 ± 0.11\n"
+      "Costante di joule:  3.39 ± 0.11\n"
      ]
     }
    ],
    "source": [
-    "# media pesata per i calori specifici\n",
-    "w = (1/(scs**2))\n",
+    "# media pesata per i costante di joule\n",
+    "w = (1/(scj**2))\n",
     "\n",
-    "calore_specifico = np.average(cs,weights=w) # media pesata dei valori ottenuti\n",
-    "errore_medio_calore_specifico = 1/np.sqrt(np.sum(w)) # errore della media pesata\n",
-    "print(\"calore_specifico: \", np.round(calore_specifico,2), '±',np.round(errore_medio_calore_specifico,2))\n"
+    "costante_di_joule = np.average(cj,weights=w) # media pesata dei valori ottenuti\n",
+    "errore_medio_costanteJ = 1/np.sqrt(np.sum(w)) # errore della media pesata\n",
+    "print(\"Costante di joule: \", np.round(costante_di_joule,2), '±',np.round(errore_medio_costanteJ,2))\n"
    ]
   }
  ],
