--- a/CALORIMETRO/PYTHON/costante_di_joule_PARTE_C.ipynb
+++ b/CALORIMETRO/PYTHON/costante_di_joule_PARTE_C.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -118,15 +118,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "costante di joule:  [4.79 4.79 4.79 4.79 4.79 4.79 4.49 4.16 3.88 3.54 3.32 3.1  2.86]\n",
-      "sigma costante di joule:  [3.39 2.14 1.52 1.15 0.91 0.74 0.56 0.44 0.36 0.3  0.26 0.22 0.21]\n"
+      "13 B:  [0.008 0.008 0.008 0.008 0.008 0.008 0.009 0.01  0.01  0.011 0.012 0.013\n",
+      " 0.014]\n",
+      "13 sigmaB:  [0.006 0.004 0.003 0.002 0.002 0.001 0.001 0.001 0.001 0.001 0.001 0.001\n",
+      " 0.001]\n",
+      "13 A:  [295. 295. 295. 295. 295. 295. 295. 294. 294. 294. 294. 294. 293.]\n",
+      "13 sigmaA:  [0.46 0.42 0.39 0.36 0.34 0.32 0.32 0.32 0.34 0.38 0.4  0.43 0.5 ]\n",
+      "13 sigmaY:  [0.5  0.5  0.5  0.5  0.5  0.5  0.52 0.55 0.6  0.69 0.76 0.85 1.01]\n",
+      "13 costante di joule:  [4.79 4.79 4.79 4.79 4.79 4.79 4.49 4.16 3.88 3.54 3.32 3.1  2.86]\n",
+      "13 sigma costante di joule:  [3.39 2.14 1.52 1.15 0.91 0.74 0.56 0.44 0.36 0.3  0.26 0.22 0.21]\n"
      ]
     },
     {
@@ -144,10 +151,22 @@
     "calori_specifici = [] # buffer\n",
     "sigma_calori_specifici = [] # buffer\n",
     "\n",
+    "B = np.array([])\n",
+    "sigmaB = np.array([])\n",
+    "A = np.array([])\n",
+    "sigmaA = np.array([])\n",
+    "sigmaY = np.array([])\n",
+    "\n",
     "for i in range(3,len(T)):\n",
     "    r = RettaInterpolata(t[:i], T[:i],0.5) # calcola retta considerando solo i primi punti\n",
     "    J = (I*V)/(c_h20 * r.B * (m_h20 + me)) # calcola il valore del costante di joule \n",
     "    sigmaJ = J * r.sigmaB / r.B # calcola l'errore del costante di joule\n",
+    "\n",
+    "    A = np.append(A,r.A)\n",
+    "    sigmaA = np.append(sigmaA,r.sigmaA)\n",
+    "    B = np.append(B,r.B)\n",
+    "    sigmaB = np.append(sigmaB,r.sigmaB)\n",
+    "    sigmaY = np.append(sigmaY,r.sigmaY)\n",
     "\n",
     "    calori_specifici.append(J)\n",
     "    sigma_calori_specifici.append(sigmaJ)\n",
@@ -162,9 +181,13 @@
     "\n",
     "cj = np.array(calori_specifici)\n",
     "scj = np.array(sigma_calori_specifici)\n",
-    "\n",
-    "print(\"costante di joule: \", np.round(cj,2))\n",
-    "print(\"sigma costante di joule: \", np.round(scj,2)) # ho meno errori quando ho più punti"
+    "print( len(B),\"B: \", np.round(B,3))\n",
+    "print(len(sigmaB), \"sigmaB: \", np.round(sigmaB,3))\n",
+    "print(len(A), \"A: \",np.round(A))\n",
+    "print(len(sigmaA),\"sigmaA: \", np.round(sigmaA,2))\n",
+    "print(len(sigmaY),\"sigmaY: \", np.round(sigmaY,2))\n",
+    "print(len(cj),\"costante di joule: \", np.round(cj,2))\n",
+    "print(len(scj),\"sigma costante di joule: \", np.round(scj,2)) # ho meno errori quando ho più punti"
    ]
   },
   {
@@ -181,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
