added parse result

--- a/CALORIMETRO/PYTHON/calore_latente.ipynb
+++ b/CALORIMETRO/PYTHON/calore_latente.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "calore latente:  476302 ± 31128\n"
+      "calore latente: 476.3e+3 ± 31.13e+3\n"
      ]
     }
    ],
    "source": [
     "from typing import Final as const\n",
+    "from interpolazione2 import parseResult\n",
     "import numpy as np\n",
     "\n",
     "T_fus: const = 273.15 # °K temperatura di fusione del ghiaccio\n",
@@ -49,7 +50,7 @@
     "\n",
     "calore_latente = int(calore_latente)\n",
     "sigma_cl = int(sigma_cl)\n",
-    "print(\"calore latente: \",calore_latente, '±', sigma_cl)\n"
+    "print(\"calore latente: \" + parseResult(calore_latente,sigma_cl,decimals = 2,exponent = 3))\n"
    ]
   }
  ],
@@ -71,7 +72,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.6"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
