recuperate vecchie misure

--- a/CALORIMETRO/PYTHON/calore_latente.ipynb
+++ b/CALORIMETRO/PYTHON/calore_latente.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "calore latente: 476.3e+3 ± 31.13e+3\n"
+      "calore latente: 460e+3 ± 25e+3\n"
      ]
     }
    ],
@@ -24,15 +24,14 @@
     "\n",
     "m_ice = 0.05 # kg massa di ghiaccio\n",
     "m_h20 = 0.3 # kg massa di acqua\n",
-    "me_200 = 0.014 # massa equivalente per 200g di h20\n",
-    "me = me_200 * 0.3 / 0.2 # massa equivalente per 300g di h20\n",
+    "me = 0.014 # massa equivalente per 200g di h20\n",
     "\n",
     "Te = 57.5 + 273.15 # °K temperatura di equilibrio misurata\n",
     "T_h20 = 85.5 + 273.15 # °K temperatura acqua riscaldata\n",
     "T_ice = -17 + 273.15 # °K temperatura ghiaccio (freezer)\n",
     "\n",
     "sigma_T = 0.5 # incertezza dovuta allo strumento di misura\n",
-    "sigma_me = 0.007 * 0.3 / 0.2 # incertezza della massa equivalente per 300g di h20\n",
+    "sigma_me = 0.007 # incertezza della massa equivalente\n",
     "\n",
     "calore_latente = (\n",
     "    (m_h20 + me) * c_h20 * (T_h20 - Te)  # sigma_me e sigma_Tx2\n",
@@ -50,7 +49,7 @@
     "\n",
     "calore_latente = int(calore_latente)\n",
     "sigma_cl = int(sigma_cl)\n",
-    "print(\"calore latente: \" + parseResult(calore_latente,sigma_cl,decimals = 2,exponent = 3))\n"
+    "print(\"calore latente: \" + parseResult(calore_latente,sigma_cl,decimals = 0,exponent = 3))\n"
    ]
   }
  ],
