--- a/VISCOSITA/PYTHON/studio_errori_di_misura.ipynb
+++ b/VISCOSITA/PYTHON/studio_errori_di_misura.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
     "import os\n",
     "\n",
     "dir_path = os.path.abspath('') # lettura file\n",
-    "FILE = dir_path + '/../CSV/' + 'T=24.5°C 100 misure d=10cm.csv'\n",
+    "FILE = dir_path + '/../CSV/' + 'parteA_1giorno.csv'\n",
     "fr = pd.read_csv(FILE)\n",
     "\n",
     "t = np.array(fr['t(s)'])  # carica le misure t in nparray\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
