done with viscosità

--- a/VISCOSITA/PYTHON/misura_del_coeff_viscosita_PARTE_B.ipynb
+++ b/VISCOSITA/PYTHON/misura_del_coeff_viscosita_PARTE_B.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,55 @@
    "source": [
     "## misura di $\\eta$\n",
     "\n",
-    "$\\eta = $\n"
+    "$B = \\frac{2 g (\\rho_{sferetta} - \\rho_{liquido})}{9 \\eta} \\Rightarrow\n",
+    "\\eta = \\frac{2 g (\\rho_{sferetta} - \\rho_{liquido})}{9 B}\n",
+    "$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "viscosità 24.5°C:  1.23 0.08\n",
+      "aspettati:  1.0\n",
+      "viscosità 18.5°C 1.95 0.05\n",
+      "aspettati:  2.44\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from typing import Final as const\n",
+    "\n",
+    "rho_sferetta: const = 7800\n",
+    "rho_glicerina: const = 1260\n",
+    "diff_densita: const = rho_sferetta - rho_glicerina\n",
+    "g :const = 9.81\n",
+    "\n",
+    "B18 = r18.B\n",
+    "sigmaB18 = r18.sigmaB\n",
+    "B24 = r24.B\n",
+    "sigmaB24 = r24.sigmaB\n",
+    "T24 = 24.5\n",
+    "T18 = 15.5\n",
+    "\n",
+    "costante = (2 * g * diff_densita)/ 9\n",
+    "\n",
+    "viscosita24 = costante / B24\n",
+    "sigma_viscosita24 = costante * np.abs(-1/B24**2) * sigmaB24 # da taylor\n",
+    "\n",
+    "print(\"viscosità 24.5°C: \",np.round(viscosita24,2), np.round(sigma_viscosita24,2))\n",
+    "print(\"aspettati: \",np.round(np.exp(-2.18-0.099*T24)* 100,2))\n",
+    "\n",
+    "viscosita18 = costante / B18\n",
+    "sigma_viscosita18 = costante * np.abs(-1/B18**2) * sigmaB18\n",
+    "print(\"viscosità 18.5°C\",np.round(viscosita18,2), np.round(sigma_viscosita18,2))\n",
+    "print(\"aspettati: \",np.round(np.exp(-2.18-0.099*T18)* 100,2))"
    ]
   }
  ],
