distanze variabii aggiornato

--- a/BILANCIA DI COLUMB/PYTHON/voltaggi_variabili_A.ipynb
+++ b/BILANCIA DI COLUMB/PYTHON/voltaggi_variabili_A.ipynb
@@ -57,9 +57,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### verifica $\\theta \\propto V_1V_2$"
+   ]
   },
   {
    "cell_type": "code",
