--- a/BILANCIA DI COLUMB/PYTHON/tensioni_variabili_A.ipynb
+++ b/BILANCIA DI COLUMB/PYTHON/tensioni_variabili_A.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# VOLTAGGI VARIABILI\n",
+    "# TENSIONI VARIABILI\n",
     "\n",
     "Misuriamo l'angolo di torsione dovuto alla repulsione delle sfere cariche poste a una distanza fissa (10cm).\n",
     "Nel primo file sono raccolte torsioni per sfere di uguale carica, nel secondo viene fissata la carica di una sfera e variata la seconda.\n",
