--- a/BILANCIA DI COLUMB/PYTHON/torsione_C.ipynb
+++ b/BILANCIA DI COLUMB/PYTHON/torsione_C.ipynb
@@ -112,14 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "K torcente:  8.62e-05 ± 7e-07 N rad^{-1}\n"
+      "K torcente:  8.62e-05 ± 7e-07\n"
      ]
     }
    ],
