removed interpolazione 3 e aggiunto alla directory di sys.path

--- a/BILANCIA DI COLUMB/PYTHON/distanze_variabili_B.ipynb
+++ b/BILANCIA DI COLUMB/PYTHON/distanze_variabili_B.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
       "\n",
       "sigmaY: [0.13888253 0.13669031 0.13636427 0.13633711 0.13545203 0.13578586\n",
       " 0.13519613]\n",
-      "chiquadro ridotto: 0.010130355226379213\n",
+      "chiquadro ridotto: 0.01\n",
       "df: 5\n",
       "    \n",
       "\n"
