--- a/URTI/PYTHON/verifica_Fma.ipynb
+++ b/URTI/PYTHON/verifica_Fma.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,10 @@
      "output_type": "stream",
      "text": [
       "m carrello ROSSO:  (253.0 ± 1.6)e-3 Kg\n",
-      "m carrello BLU:  (247.4 ± 3.5)e-3 Kg\n"
+      "Confidenza con valore atteso:  100.0 %\n",
+      "m carrello BLU:  (247.4 ± 3.5)e-3 Kg\n",
+      "0.0\n",
+      "Confidenza con valore atteso:  100.0 %\n"
      ]
     },
     {
@@ -40,7 +43,7 @@
     "import os\n",
     "import scipy.stats as sc\n",
     "import matplotlib.pyplot as plt\n",
-    "from interpolazione3 import final_val\n",
+    "from interpolazione3 import final_val, probability_under_norm\n",
     "\n",
     "PATH = os.path.abspath('')\n",
     "FILE = PATH + '/../CSV/Fma_parteA.csv'\n",
@@ -82,7 +85,12 @@
     "\n",
     "\n",
     "print('m carrello ROSSO: ',final_val(mR,sigmamR,decimals=1,exp=-3,udm='Kg'))\n",
+    "print('Confidenza con valore atteso: ',100 - probability_under_norm(mR,sigmamR,0.253)*100,'%')\n",
+    "\n",
     "print('m carrello BLU: ',final_val(mB,sigmamB,decimals=1,exp=-3,udm='Kg'))\n",
+    "print(probability_under_norm(mB,sigmamB,0.250))\n",
+    "print('Confidenza con valore atteso: ',100 - probability_under_norm(mB,sigmamB,0.250)*100,'%')\n",
+    "\n",
     "\n",
     "plt.legend()\n",
     "plt.show()"
