confidenze molto elevate

--- a/URTI/PYTHON/verifica_Fma.ipynb
+++ b/URTI/PYTHON/verifica_Fma.ipynb
@@ -20,10 +20,9 @@
      "output_type": "stream",
      "text": [
       "m carrello ROSSO:  (253.0 ± 1.6)e-3 Kg\n",
-      "Confidenza con valore atteso:  100.0 %\n",
+      "Confidenza con valore atteso:  98.4 %\n",
       "m carrello BLU:  (247.4 ± 3.5)e-3 Kg\n",
-      "0.0\n",
-      "Confidenza con valore atteso:  100.0 %\n"
+      "Confidenza con valore atteso:  44.7 %\n"
      ]
     },
     {
@@ -88,8 +87,7 @@
     "print('Confidenza con valore atteso: ',100 - probability_under_norm(mR,sigmamR,0.253)*100,'%')\n",
     "\n",
     "print('m carrello BLU: ',final_val(mB,sigmamB,decimals=1,exp=-3,udm='Kg'))\n",
-    "print(probability_under_norm(mB,sigmamB,0.250))\n",
-    "print('Confidenza con valore atteso: ',100 - probability_under_norm(mB,sigmamB,0.250)*100,'%')\n",
+    "print('Confidenza con valore atteso: ',np.round(100 - probability_under_norm(mB,sigmamB,0.250)*100,1),'%')\n",
     "\n",
     "\n",
     "plt.legend()\n",
