--- a/URTI/PYTHON/verifica_Fma.ipynb
+++ b/URTI/PYTHON/verifica_Fma.ipynb
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "m carrello ROSSO:  (253.0 ± 1.6)e-3 Kg\n",
+      "m carrello ROSSO:  (253.0 ± 0.5)e-3 Kg\n",
       "Confidenza con valore atteso:  98.4 %\n",
-      "m carrello BLU:  (247.4 ± 3.5)e-3 Kg\n",
+      "m carrello BLU:  (247.4 ± 1.1)e-3 Kg\n",
       "Confidenza con valore atteso:  44.7 %\n"
      ]
     },
@@ -54,14 +54,19 @@
     "mB = np.array(fr['m BLU'])\n",
     "sigmamB = np.array(fr['sigmam BLU'])\n",
     "wB = 1 / sigmamB**2\n",
+    "N = len(mR)\n",
     "\n",
     "# plt.hist(mR,bins=11, density=True)\n",
     "# plt.hist(mB,bins=11, density=True)\n",
     "\n",
     "sigmamR = np.std(mR)\n",
     "sigmamB = np.std(mB)\n",
+    "sigma_mediaR = sigmamR/np.sqrt(N)\n",
+    "sigma_mediaB = sigmamB/np.sqrt(N)\n",
     "mR = np.average(mR, weights=wR)\n",
     "mB = np.average(mB, weights=wB)\n",
+    "\n",
+    "\n",
     "\n",
     "x = np.linspace(min(mR-3*sigmamR,mB-3*sigmamB),max(mR+3*sigmamR,mB+3*sigmamB),1000)\n",
     "R = sc.norm.pdf(x,loc=mR,scale=sigmamR)\n",
@@ -83,15 +88,23 @@
     "plt.xticks(np.round([mB,mR,0.250,0.253],3))\n",
     "\n",
     "\n",
-    "print('m carrello ROSSO: ',final_val(mR,sigmamR,decimals=1,exp=-3,udm='Kg'))\n",
+    "print('m carrello ROSSO: ',final_val(mR,sigma_mediaR,decimals=1,exp=-3,udm='Kg'))\n",
     "print('Confidenza con valore atteso: ',100 - probability_under_norm(mR,sigmamR,0.253)*100,'%')\n",
     "\n",
-    "print('m carrello BLU: ',final_val(mB,sigmamB,decimals=1,exp=-3,udm='Kg'))\n",
+    "print('m carrello BLU: ',final_val(mB,sigma_mediaB,decimals=1,exp=-3,udm='Kg'))\n",
     "print('Confidenza con valore atteso: ',np.round(100 - probability_under_norm(mB,sigmamB,0.250)*100,1),'%')\n",
     "\n",
     "\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "i valori di massa ottenuti risultano essere molto vicini al valore atteso, in particolare abbiamo una confidenza del 98% per il carrello rosso e del 45% per il carrello blu. Entrambi risultano essere molto maggiori del 5%, è quindi confermata l'ipotesi $F = ma$ "
    ]
   }
  ],
