top verifica ma

--- a/URTI/PYTHON/verifica_Fma.ipynb
+++ b/URTI/PYTHON/verifica_Fma.ipynb
@@ -7,7 +7,10 @@
    "source": [
     "# PARTE A: stima della massa\n",
     "\n",
-    "raccolte misure dell'accelerazione in funzione della forza"
+    "del coefficiente angolare della retta ottenuta nel piano a-F\n",
+    "\n",
+    "E' attesa la relazione\n",
+    "$F = ma$"
    ]
   },
   {
@@ -65,8 +68,6 @@
     "sigma_mediaB = sigmamB/np.sqrt(N)\n",
     "mR = np.average(mR, weights=wR)\n",
     "mB = np.average(mB, weights=wB)\n",
-    "\n",
-    "\n",
     "\n",
     "x = np.linspace(min(mR-3*sigmamR,mB-3*sigmamB),max(mR+3*sigmamR,mB+3*sigmamB),1000)\n",
     "R = sc.norm.pdf(x,loc=mR,scale=sigmamR)\n",
