--- a/URTI/PYTHON/verifica_Fma.ipynb
+++ b/URTI/PYTHON/verifica_Fma.ipynb
@@ -51,31 +51,31 @@
     "FILE = PATH + '/../CSV/Fma_parteA.csv'\n",
     "fr = pd.read_csv(FILE)\n",
     "\n",
-    "mR = np.array(fr['m ROSSO'])\n",
-    "sigmamR = np.array(fr['sigmam ROSSO']) # sottostimati da capstone ma usati per media pesata\n",
-    "wR = 1 / sigmamR**2\n",
+    "m154 = np.array(fr['m ROSSO'])\n",
+    "sigmam154 = np.array(fr['sigmam ROSSO']) # sottostimati da capstone ma usati per media pesata\n",
+    "wR = 1 / sigmam154**2\n",
     "mB = np.array(fr['m BLU'])\n",
     "sigmamB = np.array(fr['sigmam BLU'])\n",
     "wB = 1 / sigmamB**2\n",
-    "N = len(mR)\n",
+    "N = len(m154)\n",
     "\n",
-    "# plt.hist(mR,bins=11, density=True)\n",
+    "# plt.hist(m154,bins=11, density=True)\n",
     "# plt.hist(mB,bins=11, density=True)\n",
     "\n",
-    "sigmamR = np.std(mR)\n",
+    "sigmam154 = np.std(m154)\n",
     "sigmamB = np.std(mB)\n",
-    "sigma_mediaR = sigmamR/np.sqrt(N)\n",
+    "sigma_mediaR = sigmam154/np.sqrt(N)\n",
     "sigma_mediaB = sigmamB/np.sqrt(N)\n",
-    "mR = np.average(mR, weights=wR)\n",
+    "m154 = np.average(m154, weights=wR)\n",
     "mB = np.average(mB, weights=wB)\n",
     "\n",
-    "x = np.linspace(min(mR-3*sigmamR,mB-3*sigmamB),max(mR+3*sigmamR,mB+3*sigmamB),1000)\n",
-    "R = sc.norm.pdf(x,loc=mR,scale=sigmamR)\n",
+    "x = np.linspace(min(m154-3*sigmam154,mB-3*sigmamB),max(m154+3*sigmam154,mB+3*sigmamB),1000)\n",
+    "R = sc.norm.pdf(x,loc=m154,scale=sigmam154)\n",
     "plt.plot(x,R, color='red', label='carrello rosso')\n",
-    "t = np.abs(mR - 0.253) / sigmamR\n",
+    "t = np.abs(m154 - 0.253) / sigmam154\n",
     "\n",
     "plt.fill_between(\n",
-    "    x= x,y1= R,where= (mR - t*sigmamR < x)&(x < mR + t*sigmamR),\n",
+    "    x= x,y1= R,where= (m154 - t*sigmam154 < x)&(x < m154 + t*sigmam154),\n",
     "    color= \"red\",alpha= 0.2)\n",
     "\n",
     "B = sc.norm.pdf(x,loc=mB,scale=sigmamB)\n",
@@ -86,11 +86,11 @@
     "    x= x,y1= B,where= (mB - t*sigmamB < x)&(x < mB + t*sigmamB),\n",
     "    color= \"blue\",alpha= 0.2)\n",
     "\n",
-    "plt.xticks(np.round([mB,mR,0.250,0.253],3))\n",
+    "plt.xticks(np.round([mB,m154,0.250,0.253],3))\n",
     "\n",
     "\n",
-    "print('m carrello ROSSO: ',final_val(mR,sigma_mediaR,decimals=1,exp=-3,udm='Kg'))\n",
-    "print('Confidenza con valore atteso: ',100 - probability_under_norm(mR,sigmamR,0.253)*100,'%')\n",
+    "print('m carrello ROSSO: ',final_val(m154,sigma_mediaR,decimals=1,exp=-3,udm='Kg'))\n",
+    "print('Confidenza con valore atteso: ',100 - probability_under_norm(m154,sigmam154,0.253)*100,'%')\n",
     "\n",
     "print('m carrello BLU: ',final_val(mB,sigma_mediaB,decimals=1,exp=-3,udm='Kg'))\n",
     "print('Confidenza con valore atteso: ',np.round(100 - probability_under_norm(mB,sigmamB,0.250)*100,1),'%')\n",
@@ -106,6 +106,16 @@
    "metadata": {},
    "source": [
     "i valori di massa ottenuti risultano essere molto vicini al valore atteso, in particolare abbiamo una confidenza del 98% per il carrello rosso e del 45% per il carrello blu. Entrambi risultano essere molto maggiori del 5%, è quindi confermata l'ipotesi $F = ma$ "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### aggiunta pesi\n",
+    "\n",
+    "ai carrelli vengono aggiunte delle masse"
    ]
   }
  ],
