--- a/URTI/PYTHON/urti_centrali.ipynb
+++ b/URTI/PYTHON/urti_centrali.ipynb
@@ -40,7 +40,7 @@
     "from interpolazione3 import final_val, probability_under_norm\n",
     "\n",
     "PATH = os.path.abspath('')\n",
-    "FILE = PATH + '/../CSV/Fma_parteA.csv'\n",
+    "FILE = PATH + '/../CSV/urti_magnete.csv'\n",
     "fr = pd.read_csv(FILE)\n",
     "\n"
    ]
