--- a/KATER/PYTHON/intersezione_parabole_periodi.ipynb
+++ b/KATER/PYTHON/intersezione_parabole_periodi.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -198,15 +198,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.407968429563936\n",
-      "2.687233125184001\n"
+      "0.6510261389106079\n",
+      "0.8893383280357228\n"
      ]
     }
    ],
@@ -217,20 +217,20 @@
     "sT2a = r2.sigmaY[6]\n",
     "sT2b = r2.sigmaY[7]\n",
     "\n",
-    "no = T2(xa)*T1(xb)*np.sqrt((sT2a/T2(xa))**2+(sT1b/T1(xb))**2)\n",
-    "ne = T1(xa)*T2(xb)*np.sqrt((sT1a/T1(xa))**2+(sT2b/T2(xb))**2)\n",
+    "no = sT2a/T2(xa)+sT1b/T1(xb)\n",
+    "ne = sT1a/T1(xa)+sT2b/T2(xb)\n",
     "s = np.sqrt(sT1a**2 + sT1b**2 + sT2a**2 + sT2b**2)\n",
     "n = np.sqrt(no**2 + ne**2)\n",
     "\n",
-    "sigmaT_A = T_A * np.sqrt((n/(T2(xa)*T1(xb) - T1(xa)*T2(xb)))**2 + (s/(T1(xb)-T2(xb)-T1(xa)+T2(xa)))**2)\n",
+    "sigmaT_A = np.abs(n/(T2(xa)*T1(xb) - T1(xa)*T2(xb))) + np.abs(s/(T1(xb)-T2(xb)-T1(xa)+T2(xa)))\n",
     "print(sigmaT_A)\n",
     "\n",
     "# metodo B\n",
-    "no = np.sqrt((r1.sigmaA/r1.A)**2 + (r2.sigmaB/r2.sigmaB)**2)\n",
-    "ne = np.sqrt((r2.sigmaA/r2.A)**2 + (r1.sigmaB/r1.sigmaB)**2)\n",
+    "no = (r1.sigmaA/r1.A) + (r2.sigmaB/r2.sigmaB)\n",
+    "ne = (r2.sigmaA/r2.A) + (r1.sigmaB/r1.sigmaB)\n",
     "s = np.sqrt(r1.sigmaB**2 + r2.sigmaB**2)\n",
     "n = np.sqrt(no**2 + ne**2)\n",
-    "sigmaT_B = np.sqrt((n/(r1.A*r2.B - r2.A * r1.B))**2 + (s/(r2.B - r1.B))**2)\n",
+    "sigmaT_B = (n/(r1.A*r2.B - r2.A * r1.B)) + (s/(r2.B - r1.B))\n",
     "\n",
     "print(sigmaT_B)"
    ]
