--- a/KATER/PYTHON/intersezione_parabole_periodi.ipynb
+++ b/KATER/PYTHON/intersezione_parabole_periodi.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -198,15 +198,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6510261389106079\n",
-      "0.8893383280357228\n"
+      "0.6214047721919613\n",
+      "0.1227008217904206\n"
      ]
     }
    ],
@@ -217,8 +217,8 @@
     "sT2a = r2.sigmaY[6]\n",
     "sT2b = r2.sigmaY[7]\n",
     "\n",
-    "no = sT2a/T2(xa)+sT1b/T1(xb)\n",
-    "ne = sT1a/T1(xa)+sT2b/T2(xb)\n",
+    "no = np.sqrt((sT2a/T2(xa))**2 + (sT1b/T1(xb))**2)\n",
+    "ne = np.sqrt((sT1a/T1(xa))**2 + (sT2b/T2(xb))**2)\n",
     "s = np.sqrt(sT1a**2 + sT1b**2 + sT2a**2 + sT2b**2)\n",
     "n = np.sqrt(no**2 + ne**2)\n",
     "\n",
@@ -226,11 +226,12 @@
     "print(sigmaT_A)\n",
     "\n",
     "# metodo B\n",
-    "no = (r1.sigmaA/r1.A) + (r2.sigmaB/r2.sigmaB)\n",
-    "ne = (r2.sigmaA/r2.A) + (r1.sigmaB/r1.sigmaB)\n",
+    "no = (r1.A*r2.B) * np.sqrt((r1.sigmaA/r1.A)**2 + (r2.sigmaB/r2.B)**2)\n",
+    "ne = (r2.A*r1.B) * np.sqrt((r2.sigmaA/r2.A)**2 + (r1.sigmaB/r1.B)**2)\n",
     "s = np.sqrt(r1.sigmaB**2 + r2.sigmaB**2)\n",
     "n = np.sqrt(no**2 + ne**2)\n",
-    "sigmaT_B = (n/(r1.A*r2.B - r2.A * r1.B)) + (s/(r2.B - r1.B))\n",
+    "\n",
+    "sigmaT_B = T_B * np.sqrt((n/(r1.A*r2.B - r2.A * r1.B))**2 + (s/(r2.B - r1.B))**2)\n",
     "\n",
     "print(sigmaT_B)"
    ]
