--- a/PENDOLO DI TORSIONE/PYTHON/inerzia_disco.ipynb
+++ b/PENDOLO DI TORSIONE/PYTHON/inerzia_disco.ipynb
@@ -123,21 +123,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inerzia disco attesa:  1.5e-4  Kg m^2\n"
+      "Inerzia disco attesa:  (1.5 ± 0.14)e-4  Kg m^2\n"
      ]
     }
    ],
    "source": [
     "from interpolazione3 import decimal_val\n",
     "I_disco_attesa = 0.5 * (r_disco ** 2) * m_disco\n",
-    "print('Inerzia disco attesa: ',decimal_val(I_disco_attesa,exp=-4), 'Kg m^2')"
+    "sigma_I_disco = I_disco_attesa * np.sqrt((0.005/m_disco)**2 + (2* 0.002 / r_disco)**2)\n",
+    "\n",
+    "print('Inerzia disco attesa: ',final_val(I_disco_attesa,sigma_I_disco,exp=-4), 'Kg m^2')"
    ]
   },
   {
