nuovo giorno nuova relazione

--- a/KATER/PYTHON/intersezione_parabole_periodi.ipynb
+++ b/KATER/PYTHON/intersezione_parabole_periodi.ipynb
@@ -13,7 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -76,6 +83,39 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "linearità A + BX\n",
+      "    \n",
+      "A: 2.337602491312939 \n",
+      "B: -1.055272604222471\n",
+      "sigmaA: 0.010196523734295259\n",
+      "sigmaB: 0.03398841229855687\n",
+      "\n",
+      "sigmaY: [0.00220524 0.00220524 0.00220524 0.00220524 0.00220524 0.00220524\n",
+      " 0.00220524 0.00220524 0.00220524]\n",
+      "chiquadro ridotto: 0.0\n",
+      "df: 4.5\n",
+      "    \n",
+      " \n",
+      "linearità A + BX\n",
+      "    \n",
+      "A: 2.072128349088105 \n",
+      "B: -0.21910905567251696\n",
+      "sigmaA: 0.0029542326522648196\n",
+      "sigmaB: 0.009847441846469107\n",
+      "\n",
+      "sigmaY: [0.00063892 0.00063892 0.00063892 0.00063892 0.00063892 0.00063892\n",
+      " 0.00063892 0.00063892 0.00063892]\n",
+      "chiquadro ridotto: 0.0\n",
+      "df: 4.5\n",
+      "    \n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -121,7 +161,9 @@
     "plt.xticks(np.round(h1_sqrt,3))\n",
     "plt.ylabel('$T (s)$')\n",
     "plt.xlabel(\"$\\sqrt{h_1}\\quad(\\sqrt{m})$\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "print(r1,r2)"
    ]
   },
   {
@@ -156,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -198,15 +240,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6214047721919613\n",
-      "0.1227008217904206\n"
+      "1.407968429563936\n",
+      "0.1227008217904206\n",
+      "2.0025632637537494 0.02451427270401631\n"
      ]
     }
    ],
@@ -217,12 +260,12 @@
     "sT2a = r2.sigmaY[6]\n",
     "sT2b = r2.sigmaY[7]\n",
     "\n",
-    "no = np.sqrt((sT2a/T2(xa))**2 + (sT1b/T1(xb))**2)\n",
-    "ne = np.sqrt((sT1a/T1(xa))**2 + (sT2b/T2(xb))**2)\n",
+    "no = np.sqrt((sT2a/T2(xa))**2 + (sT1b/T1(xb))**2) * (T2(xa) * T1(xb))\n",
+    "ne = np.sqrt((sT1a/T1(xa))**2 + (sT2b/T2(xb))**2) * (T1(xa) * T2(xb))\n",
     "s = np.sqrt(sT1a**2 + sT1b**2 + sT2a**2 + sT2b**2)\n",
     "n = np.sqrt(no**2 + ne**2)\n",
     "\n",
-    "sigmaT_A = np.abs(n/(T2(xa)*T1(xb) - T1(xa)*T2(xb))) + np.abs(s/(T1(xb)-T2(xb)-T1(xa)+T2(xa)))\n",
+    "sigmaT_A = np.sqrt((n/(T2(xa)*T1(xb) - T1(xa)*T2(xb)))**2 + (s/(T1(xb)-T2(xb)-T1(xa)+T2(xa)))**2) * T_A\n",
     "print(sigmaT_A)\n",
     "\n",
     "# metodo B\n",
@@ -232,7 +275,17 @@
     "n = np.sqrt(no**2 + ne**2)\n",
     "\n",
     "sigmaT_B = T_B * np.sqrt((n/(r1.A*r2.B - r2.A * r1.B))**2 + (s/(r2.B - r1.B))**2)\n",
-    "print(sigmaT_B)"
+    "print(sigmaT_B)\n",
+    "\n",
+    "# metodo C\n",
+    "T_C = r1.A + r1.B * (r2.A - r1.A)/(r1.B - r2.B)\n",
+    "n = np.sqrt(r1.sigmaA**2 + r2.sigmaA**2)\n",
+    "s = np.sqrt(r1.sigmaB**2 + r2.sigmaB**2)\n",
+    "x = ((r2.A - r1.A)/(r1.B - r2.B)) * np.sqrt((n/(r2.A - r1.A))**2 + (s/(r1.B - r2.B))**2)\n",
+    "bx = r1.B * ((r2.A - r1.A)/(r1.B - r2.B)) * np.sqrt((x/((r2.A - r1.A)/(r1.B - r2.B)))**2 + (r1.sigmaB/r1.B)**2)\n",
+    "sigmaT_C = np.sqrt(bx**2 + r1.sigmaA**2)\n",
+    "\n",
+    "print(T_C, sigmaT_C)"
    ]
   }
  ],
