il carrello non ha le ruote fissate

--- a/URTI/PYTHON/urti_tra_due_carrelli.ipynb
+++ b/URTI/PYTHON/urti_tra_due_carrelli.ipynb
@@ -94,6 +94,8 @@
     }
    ],
    "source": [
+    "#TODO: rette che uscivano bene\n",
+    "\n",
     "deltaP = np.array(fr['deltaP'])\n",
     "deltaPm = np.mean(deltaP)\n",
     "deltaPstd = np.std(deltaP)\n",
