--- a/OSCILLAZIONI FORZATE SMORZATE/PYTHON/oscillazioni_libere.ipynb
+++ b/OSCILLAZIONI FORZATE SMORZATE/PYTHON/oscillazioni_libere.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# OSCILLAZIONI LIBERE\n",
     "\n",
-    "il sistema comunque esercita uno smorzamento benchè sia minimo, ci aspettiamo quindi che $\\omega_0$ sia una sottostima del valore vero"
+    "Interpoliamo i dati ottenuti della misurazione della velocità angolare del disco con una sinusoide.\n",
+    "\n",
+    "Il sistema comunque esercita uno smorzamento benchè sia minimo, ci aspettiamo quindi che $\\omega_0$ sia una sottostima del valore vero"
    ]
   },
   {
