--- a/KATER/PYTHON/stima_T.ipynb
+++ b/KATER/PYTHON/stima_T.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
-    "from interpolazione3 import RettaInterpolata\n",
+    "from interpolazione3 import RettaInterpolata, final_val\n",
     "import os\n",
     "\n",
     "FILE = os.path.abspath('') + '/../CSV/' + 'misure_fini.csv'\n",
@@ -109,6 +109,109 @@
     "plt.xlabel(\"$\\sqrt{h_1}\\quad(\\sqrt{m})$\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MISURA DEL PERIODO $T*$\n",
+    "\n",
+    "$T* = \\frac{T_2(x_a)T_1(x_b)-T_1(x_a)T_2(x_b)}{T_1(x_b)-T_2(x_b)-T_1(x_a)+T_2(x_a)}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T:  2.003 ± 1.414 \n"
+     ]
+    }
+   ],
+   "source": [
+    "T1 = lambda x: r1.A + r1.B * x\n",
+    "T2 = lambda x: r2.A + r2.B * x\n",
+    "\n",
+    "xa = h1_sqrt[6]\n",
+    "xb = h1_sqrt[7]\n",
+    "\n",
+    "T = (T2(xa)*T1(xb) - T1(xa)*T2(xb))/(T1(xb)-T2(xb)-T1(xa)+T2(xa))\n",
+    "\n",
+    "T1xa, T1xb = r1.sigmaY[6],r1.sigmaY[7]\n",
+    "T2xa, T2xb = r2.sigmaY[6],r2.sigmaY[7]\n",
+    "\n",
+    "no = T2(xa)*T1(xb)*np.sqrt((T2xa/T2(xa))**2 + (T1xb/T1(xb))**2)\n",
+    "ne = T1(xa)*T2(xb)*np.sqrt((T1xa/T1(xa))**2 + (T2xb/T2(xb))**2)\n",
+    "s = np.sqrt(T1xa**2+T2xb**2+T1xb**2+T2xa**2)\n",
+    "n = np.sqrt(no**2+ne**2)\n",
+    "\n",
+    "sigmaT = T*np.sqrt((n/(T2(xa)*T1(xb) - T1(xa)*T2(xb)))**2 + (s/(T1(xb)-T2(xb)-T1(xa)+T2(xa)))**2)\n",
+    "\n",
+    "print('T: ',final_val(T,sigmaT,decimals=3))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "risolvendo invece il sistema lineare\n",
+    "\n",
+    "$T^* = \\frac{A_1B_2-A_2B_1}{B_2-B_1}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T:  2.003 ± 0.12 \n"
+     ]
+    }
+   ],
+   "source": [
+    "A1,A2 = r1.A,r2.A\n",
+    "B1,B2 = r1.B,r2.B\n",
+    "\n",
+    "sA1,sA2 = r1.sigmaA,r2.sigmaA\n",
+    "sB1,sB2 = r1.sigmaB,r2.sigmaB\n",
+    "\n",
+    "T = (A1*B2 - A2*B1)/(B2-B1)\n",
+    "\n",
+    "no = A1*B2*np.sqrt((sA1/A1)**2+(sA2/A2)**2)\n",
+    "ne = A2*B1*np.sqrt((sA2/A2)**2+(sB1/B1)**2)\n",
+    "n = np.sqrt(no**2+ne**2)\n",
+    "s = np.sqrt(sB1**2+sB2**2)\n",
+    "sigmaT = T*np.sqrt((n/(A1*B2 - A2*B1))**2+(s/(B2-B1))**2)\n",
+    "\n",
+    "print('T: ',final_val(T,sigmaT,decimals=3))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "risolvendo il sistema lineare diversamente:\n",
+    "\n",
+    "$T^* = A_1+B_1\\frac{A_1-A_2}{B_2-B_1}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
