--- a/KATER/PYTHON/stima_T.ipynb
+++ b/KATER/PYTHON/stima_T.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -208,10 +208,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T:  2.003 ± 0.01 \n"
+     ]
+    }
+   ],
+   "source": [
+    "T = A1 + B1*(A1-A2)/(B2-B1)\n",
+    "\n",
+    "A = np.sqrt(sA1**2+sA2**2)\n",
+    "B = np.sqrt(sB2**2+sB1**2)\n",
+    "x = np.sqrt((A/(A1-A2))**2+(B/(B2-B1))**2)*(A1-A2)/(B2-B1)\n",
+    "bx = x*sB1\n",
+    "sigmaT = np.sqrt(bx**2+sA1**2)\n",
+    "\n",
+    "print('T: ',final_val(T,sigmaT,decimals=3))"
+   ]
   }
  ],
  "metadata": {
