--- a/KATER/PYTHON/stima_T.ipynb
+++ b/KATER/PYTHON/stima_T.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -117,19 +117,21 @@
    "source": [
     "## MISURA DEL PERIODO $T*$\n",
     "\n",
+    "usando la formula data con i valori ricavati dalle interpolazioni\n",
+    "\n",
     "$T* = \\frac{T_2(x_a)T_1(x_b)-T_1(x_a)T_2(x_b)}{T_1(x_b)-T_2(x_b)-T_1(x_a)+T_2(x_a)}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T:  2.003 ± 1.414 \n"
+      "T:  2.0026 ± 1.4138 \n"
      ]
     }
    ],
@@ -152,7 +154,7 @@
     "\n",
     "sigmaT = T*np.sqrt((n/(T2(xa)*T1(xb) - T1(xa)*T2(xb)))**2 + (s/(T1(xb)-T2(xb)-T1(xa)+T2(xa)))**2)\n",
     "\n",
-    "print('T: ',final_val(T,sigmaT,decimals=3))"
+    "print('T: ',final_val(T,sigmaT,decimals=4))"
    ]
   },
   {
@@ -160,21 +162,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "risolvendo invece il sistema lineare\n",
-    "\n",
-    "$T^* = \\frac{A_1B_2-A_2B_1}{B_2-B_1}$"
+    "usando i punti più vicini all'intersezione:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T:  2.003 ± 0.12 \n"
+      "T:  2.0022 ± 0.096 \n"
+     ]
+    }
+   ],
+   "source": [
+    "T1xa,T1xb = periodo1[6],periodo1[7]\n",
+    "T2xa,T2xb = periodo2[6],periodo2[7]\n",
+    "\n",
+    "T = (T2xa*T1xb - T1xa*T2xb)/(T1xb-T2xb-T1xa+T2xa)\n",
+    "\n",
+    "sT1xa, sT1xb = dev_stdt[6],dev_stdt[7]\n",
+    "sT2xa, sT2xb = dev_stdT[6],dev_stdT[7]\n",
+    "\n",
+    "no = T2xa*T1xb*np.sqrt((sT2xa/T2xa)**2 + (sT1xb/T1xb)**2)\n",
+    "ne = T1xa*T2xb*np.sqrt((sT1xa/T1xa)**2 + (sT2xb/T2xb)**2)\n",
+    "s = np.sqrt(sT1xa**2+sT2xb**2+sT1xb**2+sT2xa**2)\n",
+    "n = np.sqrt(no**2+ne**2)\n",
+    "\n",
+    "sigmaT = T*np.sqrt((n/(T2xa*T1xb - T1xa*T2xb))**2 + (s/(T1xb-T2xb-T1xa+T2xa))**2)\n",
+    "\n",
+    "print('T: ',final_val(T,sigmaT,decimals=4))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "risolvendo invece il sistema lineare \n",
+    "\n",
+    "$T^* = \\frac{A_1B_2-A_2B_1}{B_2-B_1}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T:  2.0026 ± 0.1196 \n"
      ]
     }
    ],
@@ -193,7 +235,7 @@
     "s = np.sqrt(sB1**2+sB2**2)\n",
     "sigmaT = T*np.sqrt((n/(A1*B2 - A2*B1))**2+(s/(B2-B1))**2)\n",
     "\n",
-    "print('T: ',final_val(T,sigmaT,decimals=3))"
+    "print('T: ',final_val(T,sigmaT,decimals=4))"
    ]
   },
   {
@@ -208,14 +250,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T:  2.003 ± 0.01 \n"
+      "T:  2.0026 ± 0.0245 \n"
      ]
     }
    ],
@@ -224,11 +266,11 @@
     "\n",
     "A = np.sqrt(sA1**2+sA2**2)\n",
     "B = np.sqrt(sB2**2+sB1**2)\n",
-    "x = np.sqrt((A/(A1-A2))**2+(B/(B2-B1))**2)*(A1-A2)/(B2-B1)\n",
-    "bx = x*sB1\n",
+    "x = np.sqrt((A/(A1-A2))**2+(B/(B2-B1))**2)*((A1-A2)/(B2-B1))\n",
+    "bx = ((A1-A2)/(B2-B1))*B1*np.sqrt((sB1/B1)**2+(x/((A1-A2)/(B2-B1)))**2)\n",
     "sigmaT = np.sqrt(bx**2+sA1**2)\n",
     "\n",
-    "print('T: ',final_val(T,sigmaT,decimals=3))"
+    "print('T: ',final_val(T,sigmaT,decimals=4))"
    ]
   }
  ],
